# comoving

./: .gitignore  LICENSE  README.md  gaia_sample.ipynb  main.py  pyproject.toml  sample_selection.ipynb
notebooks/: Gaia-comoving.ipynb  binaries_bprp.ipynb  gaia_sample.ipynb  sample_selection.ipynb
scripts/: comoving_batch.py  sample_selection.py
slurm/: TaskFile  slurm_alloc.sh
src/comoving/: coords.py
