[project]
name = "comoving"
authors = [
    {name = "Aida Behmard", email = "aida.behmard@gmail.com"},
    {name = "Adrian Price-Whelan", email = "583379+adrn@users.noreply.github.com"},
]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "astropy>=6.0.1",
    "h5py>=3.13.0",
    "healpy>=1.17.3",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "tables>=3.10.2",
    "unxt>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "ipykernel"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comoving"]

[tool.mypy]
  disable_error_code = [
    "name-defined", # for jaxtyping
  ]
  disallow_incomplete_defs = false
  disallow_untyped_defs = false
  files = ["src"]
  python_version = "3.12"
  strict = true
  warn_return_any = false
  warn_unreachable = true
  warn_unused_configs = true

  [[tool.mypy.overrides]]
    disallow_incomplete_defs = true
    disallow_untyped_defs = true
    module = "comoving.*"

  [[tool.mypy.overrides]]
    ignore_missing_imports = true
    module = [
      "quaxed.*",
      "astropy.*",
      "equinox.*",
      "hypothesis.*",
      "jax.*",
      "coordinax.*",
      "jaxtyping.*",
      "numpy.*",
      "quax.*",
      "unxt.*",
      "comoving.*"
    ]
